--- a/02-rCore-from-zero/os/Cargo.toml
+++ b/02-rCore-from-zero/os/Cargo.toml
@@ -15,4 +15,4 @@ panic = "abort"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
