finish part2 of lab-2

--- a/02-rCore-from-zero/os/Cargo.toml
+++ b/02-rCore-from-zero/os/Cargo.toml
@@ -17,3 +17,4 @@ panic = "abort"
 [dependencies]
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 buddy_system_allocator = "0.4.0"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
