--- a/02-rCore-from-zero/os/Cargo.toml
+++ b/02-rCore-from-zero/os/Cargo.toml
@@ -18,3 +18,5 @@ panic = "abort"
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 buddy_system_allocator = "0.4.0"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+spin = "0.5.2"
+algorithm = { path = 'src/algorithm' }
